--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/react.svg"
+            src="assets/img/skills/react.svg"
             alt="react"
           />
           <div class="skills__container-name">React</div>
