--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/vue.svg"
+            src="assets/img/skills/vue.svg"
             alt="vue"
           />
           <div class="skills__container-name">Vue</div>
@@ -296,7 +296,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/typescript.svg"
+            src="assets/img/skills/typescript.svg"
             alt="typescript"
           />
           <div class="skills__container-name">TypeScript</div>
@@ -305,7 +305,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/javascript.svg"
+            src="assets/img/skills/javascript.svg"
             alt="javascript"
           />
           <div class="skills__container-name">JavaScript</div>
@@ -314,7 +314,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/html.svg"
+            src="assets/img/skills/html.svg"
             alt="html"
           />
           <div class="skills__container-name">HTML</div>
@@ -323,7 +323,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/css.svg"
+            src="assets/img/skills/css.svg"
             alt="css"
           />
           <div class="skills__container-name">CSS</div>
@@ -332,7 +332,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/sass.svg"
+            src="assets/img/skills/sass.svg"
             alt="sass"
           />
           <div class="skills__container-name">SASS</div>
@@ -341,7 +341,7 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/firebase.svg"
+            src="assets/img/skills/firebase.svg"
             alt="firebase"
           />
           <div class="skills__container-name">Firebase</div>
